# dicefinder

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md
inc/: args.hpp  dice_args.hpp  dice_definitions.hpp  fast_bitset.hpp  find_dice.hpp  layout.hpp  multi_call.hpp  overload.hpp  topology.hpp  weighting.hpp
src/: args.cpp  main.cpp  topology.cpp  weighting.cpp
